--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -76,6 +76,8 @@ body {
 @import "slider";
 @import "popup";
 @import "header";
+@import "about-us";
+@import "services";
 @import "footer";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=======================================================
 
@@ -669,11 +671,8 @@ body {
 		width: 100%;
 	}
 }
-
 //=======================================================================================================
 .header-clients {
-	&__title {
-	}
 	&__divider {
 		width: 100%;
 		flex-shrink: 1;
