--- a/#source/scss/forms.scss
+++ b/#source/scss/forms.scss
@@ -128,6 +128,14 @@
 			font-size: 14px;
 		}
 	}
+	&-team {
+		background-color: #98a3a3;
+		border-bottom: 4px solid #7f8c8c;
+		&:hover {
+			background-color: #e6655e;
+			border-bottom: 4px solid #e2534b;
+		}
+	}
 	&.fw {
 		width: 100%;
 	}
