--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -79,6 +79,7 @@ body {
 @import "about-us";
 @import "services";
 @import "footer";
+@import "portfolio";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=======================================================
 
 //<ОСНОВНОЙ БЛОК>========================================================================================
