--- a/#source/scss/slider.scss
+++ b/#source/scss/slider.scss
@@ -63,11 +63,14 @@
 		width: 100%;
 		// min-width: 0;
 		min-height: calc(100vh - 130px);
+		position: relative;
 		@media (max-width: $md4 + px) {
 			min-height: calc(100vh - 110px);
 		}
 		.slick-arrow {
 			font-size: 0;
+			position: absolute;
+			z-index: 80;
 		}
 		.slick-arrow.slick-prev {
 			background-color: #e6655e;
@@ -75,8 +78,8 @@
 			height: 57px;
 			border-bottom: 3px solid #e2534b;
 			border-radius: 5px;
-			position: relative;
 			transition: all 0.3s ease 0s;
+			left: 0;
 			&:before {
 				content: url(../img/icons/double-arrows-left.png);
 				position: absolute;
@@ -93,16 +96,13 @@
 			height: 57px;
 			border-bottom: 3px solid #e2534b;
 			border-radius: 5px;
-			position: relative;
 			transition: all 0.3s ease 0s;
+			right: 0;
 			&:before {
 				content: url(../img/icons/double-arrows-right.png);
 				position: absolute;
 				top: 18px;
 				right: 10px;
-			}
-			&:active {
-				background-color: #e2534b;
 			}
 		}
 		.slick-dots {
@@ -110,7 +110,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			bottom: 20px;
+			bottom: -30px;
 		}
 		.slick-dots li {
 			list-style: none;
@@ -251,4 +251,186 @@
 		}
 	}
 }
+//=======================================================================================================
+.project {
+	&__slider {
+		margin: 0px 0px 118px 0px;
+		@media (max-width: $md2 + px) {
+			margin: 0px 0px 90px 0px;
+		}
+		@media (max-width: $md3 + px) {
+			margin: 0px 0px 70px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 0px 0px 50px 0px;
+		}
+	}
+	&__slider-title {
+		font-size: 25px;
+		line-height: 30px;
+		font-weight: 700;
+		color: #7f8c8c;
+		margin: 55px 0px;
+		@media (max-width: $md2 + px) {
+			margin: 40px 0px;
+			font-size: 22px;
+			line-height: 28px;
+		}
+		@media (max-width: $md3 + px) {
+			margin: 30px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 20px 0px;
+			font-size: 20px;
+			line-height: 26px;
+		}
+	}
+	&__slider-content {
+		position: relative;
+		.slick-arrow {
+			font-size: 0;
+			position: absolute;
+			top: 45%;
+			z-index: 80;
+			@media (max-width: $md2 + px) {
+				top: 42%;
+			}
+		}
+		.slick-arrow.slick-prev {
+			background-color: #e6655e;
+			width: 50px;
+			height: 57px;
+			border-bottom: 3px solid #e2534b;
+			border-radius: 0px 5px 5px 0px;
+			transition: all 0.3s ease 0s;
+			left: 0;
+			&:before {
+				content: url(../img/icons/double-arrows-left.png);
+				position: absolute;
+				top: 18px;
+				left: 10px;
+			}
+		}
+		.slick-arrow.slick-next {
+			right: 0;
+			background-color: #e6655e;
+			width: 50px;
+			height: 57px;
+			border-bottom: 3px solid #e2534b;
+			border-radius: 5px 0px 0px 5px;
+			transition: all 0.3s ease 0s;
+			&:before {
+				content: url(../img/icons/double-arrows-right.png);
+				position: absolute;
+				top: 18px;
+				right: 10px;
+			}
+		}
+		.slick-arrow.slick-disabled {
+			background-color: #e6655e88;
+			border-bottom: 3px solid #e6655e94;
+		}
+		.slick-dots {
+			position: absolute;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			bottom: -30px;
+			@media (max-width: $md4 + px) {
+				bottom: -20px;
+			}
+		}
+		.slick-dots li {
+			list-style: none;
+			margin: 0px 5px;
+		}
+		.slick-dots li button {
+			font-size: 0;
+			width: 60px;
+			height: 5px;
+			background-color: #b0b8b9;
+			transition: all 0.3s ease 0s;
+			@media (max-width: $md4 + px) {
+				width: 40px;
+			}
+		}
+		.slick-dots li.slick-active button {
+			background-color: #e2534b;
+		}
+	}
+}
+.slider-project {
+	width: 100%;
+	background-color: #f8f8f8;
+	border-bottom: 3px solid #e5e6e6;
+	border-radius: 5px;
+	&__img {
+		text-align: center;
+		padding: 305px 0px;
+		@media (max-width: $md2 + px) {
+			padding: 205px 0px;
+		}
+		@media (max-width: $md3 + px) {
+			padding: 150px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			padding: 90px 0px;
+		}
+	}
+}
+//=======================================================================================================
+.projects__slider-body {
+	position: relative;
+	min-width: 0;
+	.slick-arrow {
+		position: absolute;
+		top: -65px;
+		font-size: 0;
+		width: 40px;
+		height: 37px;
+		border-bottom: 3px solid #7f8c8c;
+		border-radius: 5px;
+		@media (max-width: $md3 + px) {
+			top: -53px;
+		}
+		@media (max-width: $md4 + px) {
+			top: -43px;
+			width: 35px;
+			height: 35px;
+		}
+	}
+	.slick-arrow.slick-prev {
+		right: 59px;
+		background-color: #b0b8b9;
+		transition: all 0.3s ease 0s;
+		&:before {
+			content: url(../img/icons/arrow_left.png);
+		}
+		&:hover {
+			background-color: #e6655e;
+			border-bottom: 3px solid #e2534b;
+		}
+		@media (max-width: $md3 + px) {
+			right: 55px;
+		}
+		@media (max-width: $md4 + px) {
+			right: 43px;
+		}
+	}
+	.slick-arrow.slick-next {
+		right: 0;
+		background-color: #b0b8b9;
+		transition: all 0.3s ease 0s;
+		&:before {
+			content: url(../img/icons/arrow_right.png);
+		}
+		&:hover {
+			background-color: #e6655e;
+			border-bottom: 3px solid #e2534b;
+		}
+	}
+}
+//=======================================================================================================
+
 //=======================================================================================================
